# SmartDoc

./: .gitignore  Makefile  pyproject.toml
src/: main.py
src/api/v1/: __init__.py  app.py
src/api/v1/dependencies/core/repositories/aws/: s3.py
src/api/v1/dependencies/core/services/: file_system.py
src/api/v1/endpoints/assets/: __init__.py  network.py
src/api/v1/endpoints/ml/: __init__.py  process.py
src/api/v1/endpoints/system/: __init__.py  health.py
src/api/v1/schemas/: base.py
src/api/v1/schemas/assets/: network.py
src/api/v1/schemas/system/: health.py
src/configs/: api.py  base.py  file_system.py
src/configs/aws/: s3.py
src/core/clients/aws/: s3.py
src/core/repositories/aws/: s3.py
src/core/services/file_system/: aggregator.py  base.py  local.py  s3.py
src/shared/enums/services/core/: file_system.py
src/shared/factories/aws/: s3.py
src/shared/helpers/aws/: s3.py
