[project]
name = "smart-doc"
version = "0.1.0"
description = "Smart document processing and analysis"
authors = [
    { name = "Andrii Borychevskyi", email = "a.borychevskyi@gmail.com" }
]
readme = "README.md"

requires-python = ">=3.12,<3.14.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
fastapi = "^0.116.1"
ruff = "^0.13.0"
mypy = "^1.18.1"
pydantic = "^2.11.9"
alembic = "^1.16.5"
sqlalchemy = "^2.0.43"
pydantic-settings = "^2.10.1"
uvicorn = "^0.35.0"
loguru = "^0.7.3"
python-multipart = "^0.0.20"
aiofiles = "^24.1.0"
aioboto3 = "^15.1.0"
mypy-boto3-cloudwatch = "^1.40.27"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [".venv", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
check_untyped_defs = true
explicit_package_bases = true
mypy_path = "."
exclude = "(^alembic/|^venv/|^\\.venv/|^tests/|^modules/)"
follow_imports = "silent"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["untyped_package.*"]
follow_untyped_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
